--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,19 +1,12 @@
 <!DOCTYPE html>
-<html lang="{{ page.lang | default: site.lang | default: "en" }}">
+<html lang="en">
+{% include head.html %}
+<body>
 
-  {% include head.html %}
-
-  <body>
-
-    {% include header.html %}
-
-
-        {{ content }}
-
-    {% include footer.html %}
-      
-    {% include script.html %}
-
-  </body>
-
+  <div class="wrapper">
+    {{ content }}
+  </div>
+  
+  {% include analytics.html %}
+</body>
 </html>
