--- a/_includes/analytics.html
+++ b/_includes/analytics.html
@@ -5,5 +5,5 @@
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'UA-109725013-1');
+  gtag('config', '{{ site.analytics }}');
 </script>
